@startuml classes
skinparam classAttributeIconSize 0

class User {
  + user_id: int [PK]
  + email: str
  + hashed_password: str
  + role: Role
  + created_at: datetime
  --
  + favorites: list[Book]
}

class Book {
  + book_id: int [PK]
  + title: str
  + created_at: datetime
  --
  + authors: list[Author]
  + genres: list[Genre]
  + favorite_by_users: list[User]
}

class Author {
  + author_id: int [PK]
  + name: str
  --
  + books: list[Book]
}

class Genre {
  + genre_id: int [PK]
  + name: str
  --
  + books: list[Book]
}

class BookAuthor {
  + book_id: int [PK,FK]
  + author_id: int [PK,FK]
}

class BookGenre {
  + book_id: int [PK,FK]
  + genre_id: int [PK,FK]
}

class UserFavorite {
  + user_id: int [PK,FK]
  + book_id: int [PK,FK]
}

User "1" -- "0..*" UserFavorite : "favorites"
Book "1" -- "0..*" UserFavorite : "favorited by"

Book "1" -- "0..*" BookAuthor : "authors link"
Author "1" -- "0..*" BookAuthor : "writes"

Book "1" -- "0..*" BookGenre : "genres link"
Genre "1" -- "0..*" BookGenre : "category"

@enduml
